--- a/help.html
+++ b/help.html
@@ -86,7 +86,7 @@
                 <span class="answer">
                     A: Instead of running a report against all courses, you can enter in a comma separated list of course numbers.
                     You can find a course number for a course by looking at the URL in Canvas while viewing a course.  It will look something like
-                    'https://mysite.instructure.com/courses/#####''.  The '#####' is the course number.  So, to run a report agains only courses 11111
+                    'https://mysite.instructure.com/courses/#####''.  The '#####' is the course number.  So, to run a report against only courses 11111
                     and 22222 you would enter: '11111, 22222'.
                 </span>
             </h3>       
